@@ -29,11 +29,11 @@
  *
  *
  *
- *   52: class tx_icsodcategories_datastore
- *   63:     function addSearchRestriction(&$whereClause, &$queryJoin, $conf, $object)
- *   84:     function additionalFieldsMarkers(&$markers, &$subpartArray, &$template, $filegroup, $conf, $object)
- *  119:     function additionalFieldsSearchMarkers(&$markers, &$subpartArray, &$template, $conf, $object)
- *  164:     function additionalFieldsRSSMarkers(&$markersDataset, &$subpartArray, $template, $filegroup, $conf, $object)
+ *   53: class tx_icsodcategories_datastore
+ *   64:     function addSearchRestriction(&$whereClause, &$queryJoin, $conf, $object)
+ *   85:     function additionalFieldsMarkers(&$markers, &$subpartArray, &$template, $filegroup, $conf, $object)
+ *  148:     function additionalFieldsSearchMarkers(&$markers, &$subpartArray, &$template, $conf, $object)
+ *  193:     function additionalFieldsRSSMarkers(&$markersDataset, &$subpartArray, $template, $filegroup, $conf, $object)
  *
  * TOTAL FUNCTIONS: 4
  * (This index is automatically created/updated by the extension "extdeveval")
@@ -86,18 +86,41 @@ class tx_icsodcategories_datastore {
 		$tools = t3lib_div::makeInstance('tx_icsodcategories_tools');
 		$tools->init($object->tables['filegroups'], $object->cObj);
 
-		$categories = $tools->getCategoriesElement($filegroup['uid']);
+		switch ((string)strtoupper(trim($conf['categories.']['order']))) {
+			case 'NAME':
+				$orderBy = '`'.$tools->tables['categories'].'`.`name`';
+				break;
+			case 'POSITION':
+				$orderBy = '`'.$tools->tables['mm'].'`.`sorting_foreign`';
+				break;
+			default:
+				$orderBy = '';
+		}
+
+		$categories = $tools->getCategoriesElement($filegroup['uid'], $orderBy);
 		$output = '';
 
 		if ($categories && is_array($categories) && !empty($categories)) {
 			$listNameCategories = array();
 			$pictos = array();
+			$outputCats = array();
+			$cObj = t3lib_div::makeInstance('tslib_cObj');
 			foreach ($categories as $category) {
-				$listNameCategories[] = $category['name'];
-				if ($category['picto'] && file_exists($category['picto']))
-					$pictos[] = $category['picto'];
+				// $listNameCategories[] = $category['name'];
+				// if ($category['picto'] && file_exists($category['picto']))
+					// $pictos[] = $category['picto'];
+
+				$data = array(
+					'value' => $category['name'],
+					'picto' => ($category['picto'] && file_exists($category['picto']))? $category['picto']: '',
+				);
+				$cObj->start($data, 'Category');
+				$cObj->setParent($object->data, $object->currentRecord);
+				$outputCats[] = $cObj->stdWrap('', $conf['categories.']['category.']);
 			}
-			$output .= implode(', ', $listNameCategories);
+			// $output .= implode(', ', $listNameCategories);
+			$output .= implode($conf['categories.']['separator'], $outputCats);
+			// var_dump($outputCats);
 
 			$subpart = $object->cObj->getSubpart($template, '###SUBPART_CATEGORIES###');
 			$template = $object->cObj->substituteSubpart($template, '###SUBPART_CATEGORIES###', $subpart);
@@ -106,9 +129,10 @@ class tx_icsodcategories_datastore {
 			$subpartArray['###SUBPART_CATEGORIES###'] = '';
 		}
 
-		$markers['###CATEGORIES_LABEL###'] = $object->cObj->stdWrap($GLOBALS['TSFE']->sL('LLL:EXT:ics_od_categories/locallang.xml:categories_label'), $conf['categories_label_stdWrap.']);
-		$markers['###CATEGORIES_VALUE###'] = $object->cObj->stdWrap($output, $conf['categories_stdWrap.']);
-		$markers['###CATEGORY_PICTO###'] = $object->cObj->stdWrap(implode(',', $pictos), $conf['category_picto.']);
+		$markers['###CATEGORIES_LABEL###'] = $object->cObj->stdWrap($GLOBALS['TSFE']->sL('LLL:EXT:ics_od_categories/locallang.xml:categories_label'), $conf['categories.']['label.']);
+		// $markers['###CATEGORIES_VALUE###'] = $object->cObj->stdWrap($output, $conf['categories_stdWrap.']);
+		$markers['###CATEGORIES_VALUE###'] = $object->cObj->stdWrap($output, $conf['categories.']);
+		// $markers['###CATEGORY_PICTO###'] = $object->cObj->stdWrap(implode(',', $pictos), $conf['category_picto.']);
 	}
 
 	/**
