@@ -5,7 +5,7 @@
 	<!-- ###GROUP_ROW### start -->
 	<!-- ###ROW_ITEM### start -->
 	<div class="###PREFIXID###_dataset">
-		###CATEGORY_PICTO###
+		###CATEGORIES_VALUE###
 		<div class="last_release">
 			<p><a class="detail_link" href="###URL###">###TITLE###</a></P>
 			<p>###RELEASE_DATE###</p>
